--- a/FOLDER 2/index.html
+++ b/FOLDER 2/index.html
@@ -1,1 +1,26 @@
-
+<!--It should conatin the images of the  mobile view and the desktopview-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+           @media only screen and (min-width: 1025px) {
+        .mobile-only {
+            display:none !important;
+        }
+    } 
+    @media only screen and (max-width: 1026px) {
+        .desktop-only {
+            display:none !important;
+        }
+    } 
+    </style>
+</head>
+<body>
+    <p><img src="" >desktop view</p>
+    <p><img src="" >Mobile view view</p>
+    
+</body>
+</html>
